--- a/configs/prepare.yaml
+++ b/configs/prepare.yaml
@@ -25,26 +25,22 @@ out: /iblm/netapp/home/amassarat/breakCA/predict/out
 # What are the maximum number of threads to use for the entire pipeline?
 num_threads: 8
 
-# Which callers do you want to run to find SNVs?
-# If you don't want to run the snp pipeline, set this to a falsey value or comment out the line
-snp_callers: [gatk-snp, varscan-snp, vardict-snp, pg-snp]
-
 # Which callers do you want to run to find indels?
 # If you don't want to run the indel pipeline, set this to a falsey value or comment out the line
-indel_callers: [gatk-indel, varscan-indel, vardict-indel, delly, pindel, illumina-manta, illumina-strelka, pg-indel, breakca]
+callers: [gatk, varscan, vardict, delly, pindel, illumina-manta, illumina-strelka, pg, breakca]
 
 # Parameters to use when calling bcftools to filter the VCF output of every caller script
 # See http://www.htslib.org/doc/bcftools.html#view for all possible options
 # Use an empty string or comment out this line if you'd like your VCFs unfiltered
 # bcftools_params: "-M 2"
 
-# what should our classifier predict?
+# what should our classifier predict? what should the positive label be?
 # use "INS" if you want the classifier to predict insertions,
-# use "DEL" if you want it to predict deletions,
-# use "SNP" if you want it to predict SNVs, or
-# use "." if you want it to simply predict whether any variant exists at that site
-# __deprecated__: you can also specify a multilabel classification by providing a list instead of a single string (ex: ["INS", "DEL"] to predict both ins and dels)
-label: "."
+# use "DEL" if you want it to predict deletions, or
+# use "SNP" if you want it to predict SNVs
+# or you can tell the pipeline to use multiple possible positive labels by separating them with a pipe | (ex: 'INS|DEL' to predict indels)
+# you can also provide a list to run the pipeline multiple times with different positive labels (ex: ['INS|DEL', SNP] to create one indel training set and one SNV training set)
+label: ['INS|DEL',SNP]
 
 # Whether to "normalize" the VCF output of every caller script
 # This option is recommended if you plan to feed the data to a random forest
