--- a/envs/classify.yml
+++ b/envs/classify.yml
@@ -12,6 +12,7 @@ dependencies:
   - r-readr=1.1.1
   - r-mlr>=2.12.1
   - r-ranger>=0.11.2
+  - r-parallelmap>=1.4
   - r
   - coreutils>=8.31
   - gawk
