--- a/configs/classify.yaml
+++ b/configs/classify.yaml
@@ -26,12 +26,12 @@ data:
     path: data/odd-chrom.tsv.gz
     truth: &truth
       pg-indel
-    # filter: &filter
-    #   - 'gatk-indel~DP>10'
-  SRR891269_even:
-    path: data/even-chrom.tsv.gz
+    filter: &filter
+      - 'gatk-indel~DP>10'
+  SRR891269:
+    path: data/indel.tsv.gz
     truth: *truth # use the same truth column names as the SRR891269_odd data
-    # filter: *filter
+    filter: *filter
 
 # The unique id of the training set to be used for training the classifier
 train: SRR891269_odd
@@ -39,11 +39,11 @@ train: SRR891269_odd
 # If you already have an RDA file containing a trained classifier, you can provide the path to it here.
 # If this parameter is provided, the training step will not be performed and the training sample will be ignored.
 # But if this parameter is commented out, the training step will be performed as usual.
-model: data/model.rda
+model: data/indel.rda
 
 # A list of samples for which to make predictions, identified by their unique sample id
 # You may optionally specify a truth set for each sample if you want it to serve as test data (see "data" above)
-predict: [SRR891269_even]
+predict: [SRR891269]
 
 # Whether to perform cross validation in order to tune hyperparameters of the classifier
 # Enabling this option will substantially increase the runtime of the pipeline
