--- a/configs/classify.yaml
+++ b/configs/classify.yaml
@@ -22,19 +22,21 @@
 #          - a value to filter on
 #      The order of the filtering expressions must match the order of the cols in the TSV.
 data:
-  SRR891269_odd:
-    path: data/odd-chrom.tsv.gz
+  SRR891269:
+    path: data/indel.tsv.gz # this is the platinum genomes training data!
     truth: &truth
       pg-indel
     filter: &filter
       - 'gatk-indel~DP>10'
-  SRR891269:
-    path: data/indel.tsv.gz
-    truth: *truth # use the same truth column names as the SRR891269_odd data
-    filter: *filter
+  # here is an example test sample, but you can replace this with whichever
+  # sample for which you'd like to predict variants::
+  SRR891269_even:
+    path: out/merged_indel/SRR891269/even-chrom.tsv.gz
+    truth: *truth # use the same truth column names as the SRR891269 training data
+    filter: *filter # use the same filtering expressions, too
 
 # The unique id of the training set to be used for training the classifier
-train: SRR891269_odd
+train: SRR891269
 
 # If you already have an RDA file containing a trained classifier, you can provide the path to it here.
 # If this parameter is provided, the training step will not be performed and the training sample will be ignored.
@@ -43,7 +45,7 @@ model: data/indel.rda
 
 # A list of samples for which to make predictions, identified by their unique sample id
 # You may optionally specify a truth set for each sample if you want it to serve as test data (see "data" above)
-predict: [SRR891269]
+predict: [SRR891269_even]
 
 # Whether to perform cross validation in order to tune hyperparameters of the classifier
 # Enabling this option will substantially increase the runtime of the pipeline
