update all dependencies and freeze them at the versions we used (resolves #10)

--- a/envs/classify.yml
+++ b/envs/classify.yml
@@ -1,16 +1,15 @@
 channels:
   - defaults
 dependencies:
-  - r-dplyr>=0.7.4
-  - r-r.devices
-  - r-ranger>=0.11.2
-  - r-earth
-  - conda-forge::coreutils>=8.31
-  - r-mlr>=2.12.1
-  - r-parallelmap>=1.4
-  - r
-  - r-readr=1.1.1
-  - r-data.table>=1.10.0
-  - r-plyr=1.8.4
-  - conda-forge::gawk
-
+  - r-dplyr==0.8.5
+  - r-r.devices==2.16.1
+  - r-ranger==0.11.5
+  - r-earth==5.1.2
+  - conda-forge::coreutils==8.31
+  - r-mlr==2.17.1
+  - r-parallelmap==1.5.0
+  - r==3.5.1
+  - r-readr==1.1.1
+  - r-data.table==1.12.8
+  - r-plyr==1.8.4
+  - conda-forge::gawk==5.1.0
