--- a/envs/prepare.yml
+++ b/envs/prepare.yml
@@ -1,37 +1,34 @@
 channels:
   - defaults
 dependencies:
-  - r-pbapply>=1.3_3
-  - r-stringr>=1.3.1
-  - r-readr=1.1.1
-  - bioconda::bioconductor-rsamtools>=1.26.1
-  - gawk
-  - tabix
+  - r-pbapply==1.4_2
+  - r-stringr==1.4.0
+  - r-readr==1.1.1
+  - bioconda::bioconductor-rsamtools==1.34.0
+  - gawk==5.1.0
+  - tabix==0.2.6
   - bcftools==1.9=ha228f0b_4
-  - bioconda::delly
-  - bioconda::bioconductor-bsgenome.hsapiens.ucsc.hg19=1.4.0
-  - bioconda::bioconductor-biovizbase>=1.22.0
-  - vcftools
-  - r-randomforest>=4.6_14
-  - conda-forge::r-rmutil>=1.1.0
-  - gatk4>=4.1.1.0
-  - r-lattice>=0.20_33
-  - r-reshape>=0.8.6
-  - vardict-java
-  - manta
-  - bwa
-  - r-data.table>=1.10.0
-  - r-plyr=1.8.4
+  - bioconda::delly==0.8.3
+  - bioconda::bioconductor-bsgenome.hsapiens.ucsc.hg19==1.4.0
+  - bioconda::bioconductor-biovizbase==1.30.1
+  - vcftools==0.1.16
+  - conda-forge::r-rmutil==1.1.4
+  - gatk4==4.1.7.0
+  - r-lattice==0.20_41
+  - r-reshape==0.8.8
+  - vardict-java==1.7.0
+  - manta==1.6.0
+  - bwa==0.7.17
+  - r-data.table==1.12.8
+  - r-plyr==1.8.4
   - samtools==1.9=h8571acd_11
-  - strelka
-  - bioconda::bioconductor-variantannotation>=1.20.2
-  - pindel
-  - macs2>=2.1.2
-  - conda-forge::r-mlr>=2.12.1
-  - r-dplyr>=0.7.4
-  - bioconda::bioconductor-genomicalignments>=1.10.0
-  - bedtools
-  - varscan
-  - bioconda::bioconductor-rtracklayer>=1.34.2
-  - conda-forge::coreutils>=8.31
-
+  - strelka==2.9.10
+  - bioconda::bioconductor-variantannotation==1.28.3
+  - pindel==0.2.5b9
+  - macs2==2.1.2
+  - r-dplyr==0.8.5
+  - bioconda::bioconductor-genomicalignments==1.18.1
+  - bedtools==2.29.2
+  - varscan==2.4.4
+  - bioconda::bioconductor-rtracklayer==1.42.1
+  - conda-forge::coreutils==8.31
