--- a/configs/prepare.yaml
+++ b/configs/prepare.yaml
@@ -2,6 +2,8 @@
 # and options for the prepare pipeline. Anybody wishing to use
 # the provided snakemake pipeline should first fill out this file with paths to
 # their own data, as the Snakefile requires it.
+# Every config option has reasonable defaults unless it is labeled as "required"
+# All paths are relative to the directory that Snakemake is executed in
 # Note: this file is written in the YAML syntax (https://learnxinyminutes.com/docs/yaml/)
 
 
@@ -16,24 +18,27 @@
 # this is a required input!
 sample_file: data/samples.tsv
 
-# which samples should we execute the pipeline on?
-# Comment out this line if you want to run all samples in the sample file
-SAMP_NAMES: [SRR891269]
+# which samples from the samples_file should we execute the pipeline on?
+# Comment out this line or set it to a falsey value if you want to run all samples in the sample file
+SAMP_NAMES: [molt4_chr1, jurkat_chr1]
 
-# The path to a reference genome for BWA
-genome: /iblm/netapp/data1/external/GRC37/combined/bwa_index_assembly19/Homo_sapiens_assembly19.fasta
+# The path to a reference genome
+# The BWA index files, samtools index file (.fa.fai), and samtools dictionary file (.dict) must be stored in the same directory
+# required!
+genome: data/hg38.chr1.fa
 
 # Directory in which to output all of the output files
 # Defined relative to whatever directory you execute the snakemake command in
+# required!
 out: out
 
 # Which callers do you want to run to find SNVs?
 # If you don't want to run the snp pipeline, set this to a falsey value or comment out the line
-snp_callers: [gatk-snp, varscan-snp, vardict-snp, pg-snp]
+# snp_callers: [gatk-snp, varscan-snp, vardict-snp]
 
 # Which callers do you want to run to find indels?
 # If you don't want to run the indel pipeline, set this to a falsey value or comment out the line
-indel_callers: [gatk-indel, varscan-indel, vardict-indel, delly, pindel, illumina-manta, illumina-strelka, pg-indel, breakca]
+indel_callers: [gatk-indel, varscan-indel, vardict-indel, delly, pindel, illumina-manta, illumina-strelka, breakca]
 
 # Parameters to use when calling bcftools to filter the VCF output of every caller script
 # See http://www.htslib.org/doc/bcftools.html#view for all possible options
@@ -46,6 +51,7 @@ indel_callers: [gatk-indel, varscan-indel, vardict-indel, delly, pindel, illumin
 # use "SNP" if you want it to predict SNVs, or
 # use "." if you want it to simply predict whether any variant exists at that site
 # __deprecated__: you can also specify a multilabel classification by providing a list instead of a single string (ex: ["INS", "DEL"] to predict both ins and dels)
+# If this value is not provided, it will default to "."
 label: "."
 
 # Whether to "normalize" the VCF output of every caller script
@@ -53,11 +59,13 @@ label: "."
 # Normalization usually involves left-alignment and trimming of variants
 # See https://genome.sph.umich.edu/wiki/Variant_Normalization for more info
 # In our pipeline, the normalization step also reduces counts of variants that appear at the same position to 1
+# If this value is not provided, it will default to false, but we recommend using 'true'
 normalize: true
 
 # Whether to replace NA values in the dataset before outputting the final TSV
 # This option is recommended if you plan to feed the data to a random forest
 # Unless otherwise specified in the Caller Specific Parameters below, NA values will be replaced with 0
+# If this value is not provided, it will default to false
 fillna: true
 
 # A list of filtering expressions for filtering the sites before outputting the final TSV
@@ -72,6 +80,8 @@ snp_filter: ['gatk-snp~DP>10']
 indel_filter: ['gatk-indel~DP>10']
 
 # Whether to normalize weird numerical columns before outputting the final TSV
-# ex: scientific notation or numbers followed by a percent sign
-# This option is recommended if you plan to feed the data to a random forest
-norm_numerics: true
+# (ex: scientific notation or numbers followed by a percent sign)
+# We recommended setting this to false in order to allow normalization if you
+# plan to feed the data to a random forest
+# If this option is commented out, it will default to false
+pure_numerics: false
